# obesity_dataset

./: main.ipynb  pyproject.toml  report.tex
src/base/: classifier.py  exceptions.py  transformer.py
src/classifier/: expectationMaximisation.py  kmeans.py
src/transformers/: pca.py  standardScaler.py
