[tool.poetry]
name = "obesity-dataset"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT", "Marion ROSEC"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.1"
numpy = "^1.23.4"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
